--- a/Blog Web Site/ProgrammersBlog.Mvc/appsettings.json
+++ b/Blog Web Site/ProgrammersBlog.Mvc/appsettings.json
@@ -27,7 +27,7 @@
     "SenderName": "MuratDemirciBlog",
     "SenderEmail": "ddemircimuratt@outlook.com",
     "Username": "MuratDemirciBlog",
-    "Password": "adminuser"
+    "Password": ""
   },
   "ArticleRightSideBarWidgetOptions": {
     "Header": "En Çok Okunanlar",
